[package]
name = "opentelemetry-honeycomb"
version = "0.1.0"
authors = ["David A. Ramos <ramos@cs.stanford.edu>"]
repository = "https://github.com/ramosbugs/opentelemetry-honeycomb-rs"
description = "Unofficial OpenTelemetry Exporter for Honeycomb"
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.9"
async-trait = "0.1"
chrono = "0.4"
derivative = "2.1"
futures = "0.3"
hazy = "0.1"
# Include unmerged changes to support flushing and various async improvements.
libhoney-rust = { git = "https://github.com/ramosbugs/libhoney-rust", rev = "cda6137d93c85d725a042b022e0b692ba87c00be" }
log = "0.4"
opentelemetry = "0.12"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
async_executors = { git = "https://github.com/najamelan/async_executors", rev = "ff861e6ba97a7490ea324a614cefbeca540127fd", features = ["tokio_tp"]}
