[package]
name = "opentelemetry-honeycomb"
version = "0.1.0"
authors = ["David A. Ramos <ramos@cs.stanford.edu>"]
repository = "https://github.com/ramosbugs/opentelemetry-honeycomb-rs"
description = "Unofficial OpenTelemetry Exporter for Honeycomb"
license = "MIT"
edition = "2018"

[dependencies]
async-channel = "1.5"
async-std = "1.9"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
derivative = "2.1"
futures = "0.3"
hazy = "0.1"
# Include unmerged changes to support flushing and various async improvements.
libhoney-rust = { git = "https://github.com/ramosbugs/libhoney-rust", rev = "98710516cb63d3393d26a22d5493a421c550525a" }
log = "0.4"
opentelemetry = "0.17"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
async_executors = { version = "0.6", features = ["tokio_tp"] }
